src/mesa/state_tracker/st_cb_texture.c
@@ -868,7 +868,7 @@ st_GetTexImage(struct gl_context * ctx,
       goto fallback;
    }
 
-   if (!stImage->pt) {
+   if (!stImage->pt || !src) {
       goto fallback;
    }
 
